command add git hub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>my secoond github</h2>
+    <h2>my practice github </h2>
     <ol>
         <li>git init</li>
         <li>git add README.md</li>
@@ -15,5 +15,12 @@
         <li>git remote add origin https://github.com/sajibmh-2026/my-second-github.git</li>
         <li>git push -u origin main</li>
     </ol>
+    <h1>exploring github</h1>
+        <div>
+            <h3>For other time</h3>
+            <p>git add .</p>
+            <p>git commit -m"your meaningful message"</p>
+            <p>git push</p>
+        </div>
 </body>
 </html>
