--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
             <p>git commit -m"your meaningful message"</p>
             <p>git push</p>
         </div>
+        <img src="images/hadi.jpg" alt="hadi">
 </body>
 </html>
